# scipion-ed-dials

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dials/: __init__.py  bibtex.py  constants.py  objects.py  protocols.conf  utils.py
dials/convert/: __init__.py  input_output_utils.py  phils_utils.py  write_input_files.py
dials/protocols/: __init__.py  protocol_dials_base.py  protocol_dials_import.py  protocol_export.py  protocol_find_spots.py  protocol_index.py  protocol_integrate.py  protocol_merge.py  protocol_refine.py  protocol_scaling.py  protocol_symmetry.py
dials/tests/: __init__.py  constants_cases.py  test_ed_dials.py  testing_utils.py
dials/viewers/: __init__.py  dials_viewers.py
src/dials/: __init__.py  bibtex.py  objects.py  utils.py
src/dials/convert/: input_output_utils.py  phils_utils.py
src/dials/protocols/: __init__.py  protocol_dials_base.py  protocol_dials_import.py  protocol_integrate.py  protocol_merge.py  protocol_refine.py
src/dials/viewers/: __init__.py  dials_viewer_utils.py  dials_viewers.py
tests/: __init__.py  config.py  constants_cases.py  test_ed_dials.py
